change styling for albums, display in center, fix overriding css for centering image while aligning details to the left

--- a/client/src/Album.css
+++ b/client/src/Album.css
@@ -1,4 +1,25 @@
-.container{
+.albums-head{
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    text-align: center;
+    font-size: 50px;
+    display: flex;
+}
+
+.albums-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* height: 100vh; */
+    justify-content: center;
+}
+
+.album-list {
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
     display: flex;
     border: 1px solid #ccc;
     padding: 10px;
@@ -7,8 +28,9 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 300px;
     flex-direction: column;
-    align-items: center;
-    transition: transform 0.1s; /*detransition from hover*/
+    /* align-items: center; */
+    justify-content: center;
+    transition: transform 0.1s;
 }
 
 .container:hover{
@@ -21,6 +43,7 @@
     height: 200px;
     object-fit: cover;
     margin-bottom: 5px;
+    margin: 0 auto 5px;
 }
 
 .details {
